<resources>
    <string name="app_name">Migraine Tree</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_about">About</string>
    <string name="MigraineTree">Migraine Tree</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="calendar">Calendar</string>
    <string name="charts">Charts</string>
    <string name="WUAPIKey">2bba77ed8a35a0af</string>
    <string name="WUurl">http://api.wunderground.com/api/</string>
    <string name="conditions">/conditions</string>
    <string name="geolookup">/geolookup/q</string>
    <string name="history">/history_</string>
    <string name="q">/q/</string>
    <string name="json">.json</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_prompt">Please enter the city you are located in</string>
    <string name="newRecord">New Record</string>
    <string name="settings">Settings</string>
    <string name="default_text">--</string>
    <string name="app_name_HRM">HeartRateMonitor</string>
    <string name="i_have_a_migraine">I have a migraine!</string>
    <string name="record_new_migraine">Record new Migraine</string>
    <string name="search">search</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="set_date_time">set_date_time</string>
    <string name="please_enter_your_current_city">please enter your current city</string>
    <string name="pain_at_beginning_of_migraine">Pain at beginning of migraine:</string>
    <string name="zero">0</string>
    <string name="are_you_experiencing_aura">Are you experiencing Aura?</string>
    <string name="have_you_eaten_in_the_last_3_hours">Have you eaten in the last 3 hours?</string>
    <string name="hours_of_quality_sleep">Hours of quality sleep?</string>
    <string name="stress_levels">Stress levels</string>
    <string name="amount_of_eye_strain">Amount of eye strain</string>
    <string name="is_the_current_location_correct">Is the current location correct?</string>
    <string name="city_not_set">city not set</string>
    <string name="set_new_location">Set new location</string>
    <string name="have_you_had_a_glass_of_water_in_the_last_3_hours">Have you had a glass of water in the last 3 hours?</string>
    <string name="nauseous">Nausea</string>
    <string name="type_of_pain">Type of pain:</string>
    <string name="sensitivity_to_light">Sensitivity to light</string>
    <string name="symptoms">Symptoms:</string>
    <string name="sensitivity_noise">Sensitivity to noise</string>
    <string name="nasal_congestion">Nasal congestion</string>
    <string name="sensitivity_to_smell">Sensitivity to smell</string>
    <string name="ringing_or_popped_ears">Ringing or popped ears</string>
    <string name="confusion">Confusion or mental fog</string>
    <string name="medication">Medication:</string>
    <string name="source_of_pain">Source of pain:</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="hh_mm">HH:mm</string>
    <string name="save_record">Save Record</string>
    <string name="dateTimeError">Please set date and time</string>
    <string name="error_city_not_set">Please set current city</string>
    <string name="keep_track_of_menstruation_by_pressing_on_the_day">Keep track of menstruation by hard pressing on the day</string>
    <string name="red_drop">red drop</string>
    <string name="day_in_cycle">Day in cycle:</string>
    <string name="confirm">Save data</string>
    <string name="migraine_started">Migraine\nstarted:</string>
    <string name="track_hormones">Track Hormones</string>
    <string name="my_email">sconno05@dcs.bbk.ac.uk</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="air_pressure">Air Pressure:</string>
    <string name="weather_changes">Weather changes:</string>
    <string name="_12_h">12 h</string>
    <string name="_24_h">24 h</string>
    <string name="pain_at_start">Pain at start: </string>
    <string name="aura">Aura: </string>
    <string name="eaten">Eaten: </string>
    <string name="water">Water: </string>
    <string name="sleep">Sleep:</string>
    <string name="stress">Stress:</string>
    <string name="eye_strain">Eye strain:</string>
    <string name="update_calendar">Update calendar</string>
    <string name="migraine">Migraine</string>
    <string name="weather_data_provided_by_weather_underground">Weather data provided by Weather Underground</string>
    <string name="push_title">Push Notification</string>
    <string-array name="pain_types_array">
        <item>no pain</item>
        <item>throbbing</item>
        <item>stabbing</item>
        <item>pressure</item>
        <item>dull</item>
        <item>nagging</item>
        <item>numbness</item>
        <item>tingling</item>
        <item>radiating</item>
    </string-array>
    <string-array name="pain_areas_array">
        <item>eye</item>
        <item>temple</item>
        <item>ear</item>
        <item>neck</item>
        <item>sinus</item>
        <item>jaw</item>
        <item>teeth</item>
        <item>other</item>
    </string-array>
    <string-array name="medication_types">
        <item>No medication taken</item>
        <item>Ibuprofen (Advil, Motrin, Nurofen)</item>
        <item>Paracetamol (Tylenol, Panadol)</item>
        <item>Sumatriptan (Imitrex, Imigran)</item>
        <item>Rizatriptan (Maxalt)</item>
        <item>Almotriptan (Axert, Almogran)</item>
        <item>Excedrin</item>
        <item>Eletriptan (Relpax, Relert)</item>
        <item>Naratriptan (Naramig, Amerge)</item>
        <item>Zolmitriptan (Zomig, Zomigon)</item>
        <item>Propranolol</item>
        <item>Naproxen</item>
        <item>Frovatriptan (Frova, Migard)</item>
    </string-array>
    <string name="download_queue_provider_authority">com.amazonaws.mobile.downloader-com.terminatingcode.android.migrainetree</string>
    <string name="content_file_provider_authority">com.terminatingcode.android.migrainetree.fileprovider</string>
    <string name="google_cloud_messaging_package">com.terminatingcode.android.migrainetree</string>
    <string name="main_nav_menu_item_home">Home</string>
    <string name="title_activity_item_detail">Item Detail</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="button_text_sign_in">SIGN IN</string>
    <string name="button_text_sign_out">SIGN OUT</string>
    <string name="content_helper_error_title">No Content Viewer</string>
    <string name="content_helper_error_no_app">No Viewing App exists for content type \'%s\'.</string>
    <string name="fragment_demo_instruction_overview_header">Overview</string>
    <string name="fragment_demo_instruction_description_header">Sample App Features</string>
    <string name="feature_sign_in_title">User Sign-in</string>
    <string name="feature_sign_in_subtitle">Let your users sign in with public identity providers or your own identity system.</string>
    <string name="feature_sign_in_overview">Whether your users sign in or not, the User sign-in feature configures Amazon Cognito to uniquely identify the user and provide your app the appropriate credentials to access your AWS resources.</string>
    <string name="feature_sign_in_description">The Sample App demonstrates assignment of a unique identifier for the user, the Amazon Cognito User ID. If optional or mandatory User Sign-in has been enabled in your project, then the Sample App also includes a sign-in screen, with a button for each configured sign-in provider.</string>
    <string name="feature_sign_in_powered_by">Powered by Amazon Cognito</string>
    <string name="feature_sign_in_demo_button">Demo User Identity</string>
    <string name="feature_app_analytics_title">App Analytics</string>
    <string name="feature_app_analytics_subtitle">Collect app usage information and analyze key metrics.</string>
    <string name="feature_app_analytics_overview">Amazon Mobile Analytics allows you to collect, visualize, and export app event data. You can track app usage and monetization in the Amazon Mobile Analytics console, or run custom analysis by automatically exporting app events to Amazon S3 and Amazon Redshift.</string>
    <string name="feature_app_analytics_description">The Sample App records user session activity in metrics that may be viewed in the Amazon Mobile Analytics console. It also provides buttons to demonstrate generating a custom or monetization event, which records user activity, such as the sale of an in-app purchase item.</string>
    <string name="feature_app_analytics_powered_by">Powered by Amazon Mobile Analytics</string>
    <string name="feature_app_analytics_demo_button">Demo App Analytics</string>
    <string name="feature_user_data_storage_title">User Data Storage</string>
    <string name="feature_user_data_storage_subtitle">Store files for your users in the cloud.\nStore and sync user data in key/value pairs.</string>
    <string name="feature_user_data_storage_overview">Store user files such as photos in the cloud. Save user data in key/value pairs and sync across devices that are signed-in with the same user.</string>
    <string name="feature_user_data_storage_description">The Sample App demonstrates User File Storage and User Profile Data. The User File Storage demonstration includes a remote file explorer, which allows you to upload and download files from your Amazon S3 bucket. You will have access to two folders, a public folder where files are accessible to all users and a private folder where files are only accessible by the current app user.\n\nThe User Profile Data demonstration stores an app color theme using Amazon Cognito Sync and synchronizes that data across all of the user\'s devices as key/value pairs.</string>
    <string name="feature_user_data_storage_powered_by">Powered by Amazon Cognito and Amazon S3</string>
    <string name="feature_user_data_storage_demo_button_user_file_storage">Demo User File Storage</string>
    <string name="feature_user_data_storage_demo_button_user_settings">Demo User Profile Data</string>
    <string name="feature_push_notifications_title">Push Notifications</string>
    <string name="feature_push_notifications_subtitle">Send push notifications to individuals or groups of users.</string>
    <string name="feature_push_notifications_overview">Receive push notifications on your device and subscribe to topics you have created.</string>
    <string name="feature_push_notifications_description">The Sample App allows you to register to receive push notifications, and it provides checkboxes to demonstrate subscribing to receive messages from your configured Amazon SNS topics.</string>
    <string name="feature_push_notifications_powered_by">Powered by Amazon SNS</string>
    <string name="feature_push_notifications_demo_button">Demo Push Notifications</string>
    <string name="feature_cloud_logic_title">Cloud Logic</string>
    <string name="feature_cloud_logic_subtitle">Run backend code in the cloud.</string>
    <string name="migraine_ended">Migraine ended:</string>
    <string name="pain_at_peak_of_migraine">Pain at peak of migraine:</string>
    <string name="complete_your_migraine_record">Please complete your migraine record</string>
    <string name="feel_better">Get better soon!</string>
    <string name="migraine_severity_prediction">Migraine severity prediction:</string>
    <string name="_1_to_10">1 to 10</string>
</resources>