<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/calendar"/>
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/ic_menu_charts"
            android:title="@string/charts"/>
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_menu_add_record"
            android:title="@string/newRecord"/>
        <item
            android:id="@+id/nav_set_location"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings"/>
    </group>

    <item android:title="External Libraries">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_favorite_white_48dp"
                android:title="Heart Rate Monitor"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="AWS Demo"/>
        </menu>
    </item>

</menu>
