<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FinishRecordFragment"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/complete_your_migraine_record"
        android:textColor="@color/textColor"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/migraine_ended"
        android:paddingTop="2dp"
        android:textColor="@color/textColor"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/FREndDateTextView"
            android:text="@string/dd_mm_yyyy"
            android:textColor="@color/textColor"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/FREndTimeTextView"
            android:text="@string/hh_mm"
            android:textColor="@color/textColor"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fr_end_set_button"
            android:clickable="true"
            android:src="@android:drawable/ic_input_add"
            android:contentDescription="@string/set_date_time"/>
    </LinearLayout>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FRendDatePicker"
        android:clickable="true"
        android:background="#303030"
        android:visibility="gone"
        android:theme="@android:style/ThemeOverlay.Material.Dark"/>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FRendTimePicker"
        android:clickable="true"
        android:visibility="gone"
        android:background="#303030"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pain_at_peak_of_migraine"
        android:clickable="false"
        android:enabled="false"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/FRpainPeakLevelTextView"
        android:textColor="@color/textColor"
        android:clickable="true"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:id="@+id/FRpainPeakSeekBar"
        android:progress="0"
        android:max="10"
        android:background="#494949"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/FRconfirmButton"
        android:layout_gravity="center_horizontal|bottom"/>
</LinearLayout>
