<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              tools:context=".UserSettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/displayCity"
        android:text="@string/please_enter_your_current_city"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:textColor="@color/textColor"
        tools:targetApi="jelly_bean_mr1"/>

    <AutoCompleteTextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_prompt"
        android:textColorHint="@color/textColor"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_below="@+id/displayCity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/searchCitiesButton"
        android:clickable="true"
        android:layout_below="@+id/location"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_hormones"
        android:id="@+id/useMenstrualDataCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColor"
        android:layout_below="@+id/searchCitiesButton"
        android:buttonTint="@color/colorAccent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:checked="true"/>


</RelativeLayout>
