<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="12dp"
             tools:context="com.terminatingcode.android.migrainetree.FeelBetterFragment"
             android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/predictionView"
            android:background="@android:color/black">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preditionProgressBar"
                android:padding="12dp"
                android:indeterminate="true"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/migraine_severity_prediction"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/_1_to_10"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/predictionTextView"
                android:text="@string/default_text"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                android:textColor="@color/textColor"
                android:textSize="48sp"/>
        </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feel_better"
        android:textColor="@color/textColor"
        android:textSize="32sp"
        android:layout_gravity="center_horizontal"
        android:padding="12dp"
        android:drawableBottom="@drawable/ic_favorite_white_48dp"
        android:clickable="true"/>

</LinearLayout>
