<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/side_nav_bar"
              android:gravity="bottom"
              android:id="@+id/nav_header"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true">

    <LinearLayout
        android:id="@+id/my_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/myUserImage"
            android:scaleType="fitCenter"
            android:src="@mipmap/user"
            android:layout_width="48dp"
            android:layout_height="48dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:padding="4dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/userName" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_sign_in"
            android:id="@+id/my_button_signin"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_sign_out"
            android:id="@+id/my_button_signout"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MigraineTree"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_email"/>

</LinearLayout>
